--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@
             class="hero-video"
             id="main-video"
         >
-            <source src="/public/assets/canada.mp4" type="video/mp4">
+            <source src="/public/assets/videoclip2.mp4" type="video/mp4">
         </video>
         <div class="video-overlay"></div>
     </div>
