--- a/src/components/Tour.astro
+++ b/src/components/Tour.astro
@@ -12,7 +12,7 @@ const tourDates = [
 <section class="tour-section" id="tour">
     
     <div class="tour-header">
-        <h2 class="section-title">GLOBAL<br>RITUALS</h2>
+        <h2 class="section-title">PRÓXIMAS<br>FECHAS</h2>
         <div class="header-meta">
             <span>2025 / 2026 SEASON</span>
             <span>WORLDWIDE</span>
